[gd_scene load_steps=11 format=3 uid="uid://bjj0ytq01q18h"]

[ext_resource type="Script" uid="uid://b87brrqwnsyyf" path="res://scripts/player/player.gd" id="1_ucweq"]
[ext_resource type="Resource" uid="uid://b8xoq6k34sbi6" path="res://resources/player_movementstats.tres" id="2_8fjmc"]
[ext_resource type="Script" uid="uid://h5f1ust8e3b1" path="res://scripts/_FSMs/state_machine.gd" id="2_abrql"]
[ext_resource type="Script" uid="uid://bs5rbrag8fxp3" path="res://scripts/_FSMs/locoLayer/locomotion_air.gd" id="3_fkugw"]
[ext_resource type="Script" uid="uid://pllfe75cu7b1" path="res://scripts/_FSMs/locoLayer/locomotion_idle.gd" id="4_8fjmc"]
[ext_resource type="Script" uid="uid://tmx0wensabcx" path="res://scripts/_FSMs/locoLayer/locomotion_run.gd" id="5_qiwj3"]
[ext_resource type="Script" uid="uid://d2nfgtqleoe2j" path="res://scripts/_FSMs/locoLayer/locomotion_jumpsquat.gd" id="7_26q78"]
[ext_resource type="Script" uid="uid://oxlunud6hytu" path="res://scripts/_FSMs/locoLayer/locomotion_dash.gd" id="7_qiwj3"]
[ext_resource type="Script" uid="uid://x6uaw1er2wwo" path="res://scripts/_FSMs/locoLayer/locomotion_wallrun.gd" id="9_bectd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_08t41"]
height = 1.75

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ucweq")
mouse_sensitivity = 18
move_stats = ExtResource("2_8fjmc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_08t41")
debug_color = Color(0.99105245, 0.09259226, 5.7756904e-07, 0.41960785)

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
physics_interpolation_mode = 2
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
physics_interpolation_mode = 2
fov = 90.0

[node name="Sensors" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="RayRight" type="RayCast3D" parent="Sensors"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0)
target_position = Vector3(0.7, 0, -0.5)
hit_back_faces = false

[node name="RayBackRight" type="RayCast3D" parent="Sensors"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0)
target_position = Vector3(0.2, 0, 0.8)

[node name="RayLeft" type="RayCast3D" parent="Sensors"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0)
target_position = Vector3(-0.7, 0, -0.5)

[node name="RayBackLeft" type="RayCast3D" parent="Sensors"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0)
target_position = Vector3(-0.2, 0, 0.8)

[node name="Machines" type="Node" parent="."]

[node name="LocoLayer" type="Node" parent="Machines" node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("2_abrql")
initial_state = NodePath("LocomotionIdle")

[node name="Interruptable" type="Node" parent="Machines/LocoLayer"]

[node name="LocomotionDash" type="Node" parent="Machines/LocoLayer/Interruptable"]
script = ExtResource("7_qiwj3")
is_interruptable_state = true
metadata/_custom_type_script = "uid://oxlunud6hytu"

[node name="LocomotionAir" type="Node" parent="Machines/LocoLayer"]
script = ExtResource("3_fkugw")
metadata/_custom_type_script = "uid://bs5rbrag8fxp3"

[node name="LocomotionIdle" type="Node" parent="Machines/LocoLayer"]
script = ExtResource("4_8fjmc")
metadata/_custom_type_script = "uid://pllfe75cu7b1"

[node name="LocomotionRun" type="Node" parent="Machines/LocoLayer"]
script = ExtResource("5_qiwj3")
metadata/_custom_type_script = "uid://tmx0wensabcx"

[node name="LocomotionJumpSquat" type="Node" parent="Machines/LocoLayer"]
script = ExtResource("7_26q78")
metadata/_custom_type_script = "uid://d2nfgtqleoe2j"

[node name="LocomotionWallrun" type="Node" parent="Machines/LocoLayer"]
script = ExtResource("9_bectd")
metadata/_custom_type_script = "uid://x6uaw1er2wwo"

[node name="ActionLayer" type="Node" parent="Machines"]
unique_name_in_owner = true
script = ExtResource("2_abrql")
